--- a/index.html
+++ b/index.html
@@ -3,60 +3,222 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rokomari cart design</title>
+    <title>Rokomari Front page</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="container" id="container_wrapper">
-
-        <div class="check_mark">
-            <div  id="square_container">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+    <!-- nav start  -->
+    <header>
+        <nav class="navigation_manu">
+            <!-- logo part start  -->
+            <div class="Rokomari_logo">
+                <img src="./Assets/rokomari.png" alt="Rokomari_logo">
             </div>
-        </div>
-
-        <div class="check_cart">           
-            <div class="cart_book">
-                <img src="./Assets/Quranjpg.jpg" alt="">
+            <!-- logo part end -->
+            
+            <div class="search_field">
+                <input type="text" placeholder="Search your favorite item">
+                <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-        </div>
-
-        <div class="Writer_service">
-            <span class="book">
-                <a href="#">কুরআন অধ্যয়নের মৌলিক পদ্ধতি</a>
-            </span>
-            <span class="writer">
-                <p class="writer_name">ইমরান নযর হোসেন</p>
-            </span>
-            <span class="icon">
-                <i class="fa-solid fa-trash-can-arrow-up"></i>
-            </span>
-            <span class="available_copy">
-                <p id="copy"></p>
-            </span>
-        </div>
-
-        <div class="increase_decrease" id="wrappper_container">
-            <div class="three_wrapper">
-                <button class="btn1_minus" onclick="decreaseCount()" >
-                    <i class="fa-solid fa-minus"></i>
-                </button>
-                <button class="realNumberBtn">
-                    <span id="btn2_number">1</span>
-                </button>
-                <button class="btn1_plus" onclick="increaseCount()">
-                    <i class="fa-solid fa-plus"></i>
-                </button>
+            <div class="signIn_cartNum">
+                <div class="user_signIn">
+                    <a href="#" id="paraId">
+                        <i class="fa-solid fa-user"></i>
+                        <p id="para_id">Sign In</p>
+                    </a>
+                </div>
+                <div class="cart_icon" id="CartIcon_container">
+                    <a href="./cart.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span id="Increment_Number">0</span>
+                    </a>
+                </div>
             </div>
-        </div>
+        </nav>
+    </header>
+    <!-- nav end -->
 
-        <div class="final_product_price">
-            <p id="discount_price">245 TK.</p>
-            <del id="without_discount">350 TK.</del>
+
+    <div class="content_container">
+        <div class="cart_one">
+            <a href="#">
+                <div class="main_cart_container">
+                    <img src="./Assets/img_one.gif" alt="cart_one">
+                    <button class="Add_cart">
+                        <span>Click to add</span>
+                    </button>
+                    <div class="Product_discount_container">
+                        <span id="num_Span_Container"><h4 id="heading4">44%</h4> OFF</span>
+                    </div>
+                </div>
+                <div class="cart_caption_container">
+                    <h1>কিছু কথা কিছু ব্যাখ্যা</h1>
+                    <h2>শরিফুল হক ডালিম (বীর উওম)</h2>
+                    <p>2 In Stock</p>
+                    <div class="totalPriceWith_dis_container">
+                        <h3>245 TK.</h3>
+                        <del>350 TK.</del>
+                    </div>
+                    <button class="view_details_info_container">
+                        <span>View Details</span>
+                    </button>
+                </div>
+            </a>
         </div>
+        <div class="cart_one">
+            <a href="#">
+                <div class="main_cart_container">
+                    <img src="./Assets/img_two.jpg" alt="cart_Two">
+                    <button class="Add_cart">
+                        <span>Click to add</span>
+                    </button>
+                    <div class="Product_discount_container">
+                        <span id="num_Span_Container"><h4 id="heading4">44%</h4> OFF</span>
+                    </div>
+                </div>
+                <div class="cart_caption_container">
+                    <h1>কিছু কথা কিছু ব্যাখ্যা</h1>
+                    <h2>শরিফুল হক ডালিম (বীর উওম)</h2>
+                    <p>2 In Stock</p>
+                    <div class="totalPriceWith_dis_container">
+                        <h3>245 TK.</h3>
+                        <del>350 TK.</del>
+                    </div>
+                    <button class="view_details_info_container">
+                        <span>View Details</span>
+                    </button>
+                </div>
+            </a>
+        </div>
+         <div class="cart_one">
+            <a href="#">
+                <div class="main_cart_container">
+                    <img src="./Assets/img_three.jpg" alt="cart_one">
+                    <button class="Add_cart">
+                        <span>Click to add</span>
+                    </button>
+                    <div class="Product_discount_container">
+                        <span id="num_Span_Container"><h4 id="heading4">44%</h4> OFF</span>
+                    </div>
+                </div>
+                <div class="cart_caption_container">
+                    <h1>কিছু কথা কিছু ব্যাখ্যা</h1>
+                    <h2>শরিফুল হক ডালিম (বীর উওম)</h2>
+                    <p>2 In Stock</p>
+                    <div class="totalPriceWith_dis_container">
+                        <h3>245 TK.</h3>
+                        <del>350 TK.</del>
+                    </div>
+                    <button class="view_details_info_container">
+                        <span>View Details</span>
+                    </button>
+                </div>
+            </a>
+        </div>
+        <div class="cart_one">
+            <a href="#">
+                <div class="main_cart_container">
+                    <img src="./Assets/img_five.jpg" alt="cart_one">
+                    <button class="Add_cart">
+                        <span>Click to add</span>
+                    </button>
+                    <div class="Product_discount_container">
+                        <span id="num_Span_Container"><h4 id="heading4">44%</h4> OFF</span>
+                    </div>
+                </div>
+                <div class="cart_caption_container">
+                    <h1>কিছু কথা কিছু ব্যাখ্যা</h1>
+                    <h2>শরিফুল হক ডালিম (বীর উওম)</h2>
+                    <p>2 In Stock</p>
+                    <div class="totalPriceWith_dis_container">
+                        <h3>245 TK.</h3>
+                        <del>350 TK.</del>
+                    </div>
+                    <button class="view_details_info_container">
+                        <span>View Details</span>
+                    </button>
+                </div>
+            </a>
+        </div>
+        <div class="cart_one">
+            <a href="#">
+                <div class="main_cart_container">
+                    <img src="./Assets/img_six.jpg" alt="cart_one">
+                    <button class="Add_cart">
+                        <span>Click to add</span>
+                    </button>
+                    <div class="Product_discount_container">
+                        <span id="num_Span_Container"><h4 id="heading4">44%</h4> OFF</span>
+                    </div>
+                </div>
+                <div class="cart_caption_container">
+                    <h1>কিছু কথা কিছু ব্যাখ্যা</h1>
+                    <h2>শরিফুল হক ডালিম (বীর উওম)</h2>
+                    <p>2 In Stock</p>
+                    <div class="totalPriceWith_dis_container">
+                        <h3>245 TK.</h3>
+                        <del>350 TK.</del>
+                    </div>
+                    <button class="view_details_info_container">
+                        <span>View Details</span>
+                    </button>
+                </div>
+            </a>
+        </div>
+        <div class="cart_one">
+            <a href="#">
+                <div class="main_cart_container">
+                    <img src="./Assets/img_seven.png" alt="cart_one">
+                    <button class="Add_cart">
+                        <span>Click to add</span>
+                    </button>
+                    <div class="Product_discount_container">
+                        <span id="num_Span_Container"><h4 id="heading4">44%</h4> OFF</span>
+                    </div>
+                </div>
+                <div class="cart_caption_container">
+                    <h1>কিছু কথা কিছু ব্যাখ্যা</h1>
+                    <h2>শরিফুল হক ডালিম (বীর উওম)</h2>
+                    <p>2 In Stock</p>
+                    <div class="totalPriceWith_dis_container">
+                        <h3>245 TK.</h3>
+                        <del>350 TK.</del>
+                    </div>
+                    <button class="view_details_info_container">
+                        <span>View Details</span>
+                    </button>
+                </div>
+            </a>
+        </div>
+        <div class="cart_one">
+            <a href="#">
+                <div class="main_cart_container">
+                    <img src="./Assets/Quranjpg.jpg" alt="cart_one">
+                    <button class="Add_cart">
+                        <span>Click to add</span>
+                    </button>
+                    <div class="Product_discount_container">
+                        <span id="num_Span_Container"><h4 id="heading4">44%</h4> OFF</span>
+                    </div>
+                </div>
+                <div class="cart_caption_container">
+                    <h1>কিছু কথা কিছু ব্যাখ্যা</h1>
+                    <h2>শরিফুল হক ডালিম (বীর উওম)</h2>
+                    <p>2 In Stock</p>
+                    <div class="totalPriceWith_dis_container">
+                        <h3>245 TK.</h3>
+                        <del>350 TK.</del>
+                    </div>
+                    <button class="view_details_info_container">
+                        <span>View Details</span>
+                    </button>
+                </div>
+            </a>
+        </div> 
     </div>
 
     <script src="./index.js"></script>
+    <script src=""></script>
 </body>
 </html>
