--- a/cart.htm
+++ b/cart.htm
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rokomari Front page</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <!-- nav start  -->
     <header>
         <nav class="navigation_manu">
             <!-- logo part start  -->
             <div class="Rokomari_logo">
-               <a href="">
+               <a href="./index.html">
                 <img src="./Assets/download.png" alt="Rokomari_logo">
                </a>
             </div>
@@ -32,7 +30,7 @@
                     </a>
                 </div>
                 <div class="cart_icon" id="CartIcon_container">
-                    <a href="./cart.htm">
+                    <a href="">
                         <i class="bi bi-cart4"></i>
                         <span id="Increment_Number">0</span>
                     </a>
@@ -40,13 +38,7 @@
             </div>
         </nav>
     </header>
-    <!-- nav end -->
-
-
-    <div class="cart_container" id="cart_container">
-    </div>
-
-    <script src="./index.js"></script>
-    <script src=""></script>
+    
 </body>
+<script src="./cart.js"></script>
 </html>
